# TashgheelRestaurantsOnline

./: .gitignore  admin.html  backup.html  customers.html  expenses.html  generator.html  index.html  inventory.html  kitchen.html  main.js  mileage-field.html  next-visit-fields.html  package-lock.json  package.json  pos.html  preload.js  products.html  receipts.html  reports.html  salesmen.html  test-settings.html  upcoming-visits-card.html  vendor-report.html  vendor-summary-report.html  vendors.html  visits.html
TashgeelPOS/: admin.html  backup.html  expenses.html  index.html  main.js  package.json  pos.html  preload.js  products.html  receipts.html  reports.html  salesmen.html
TashgeelPOS/.git_backup/: FETCH_HEAD  config  index
TashgeelPOS/.git_backup/logs/: HEAD
TashgeelPOS/.git_backup/logs/refs/remotes/origin/: HEAD  main
TashgeelPOS/.git_backup/refs/heads/: main
TashgeelPOS/css/: styles.css
TashgeelPOS/js/: admin-app.js  auth.js  backup-system.js  expenses-app.js  pos-app.js  products-app.js  receipts-app.js  reports-app.js  reports-app1.js  salesmen-app.js
css/: styles.css
js/: admin-app.js  auth.js  customers-app.js  db.js  expenses-app.js  next-visit-helper.js  pos-app.js  products-app.js  receipts-app.js  reports-app.js  salesmen-app.js  shared-nav.js  shop-settings.js  translations.js  vendor-report-app.js  vendor-summary-report.js  vendors-app.js  visits-app.js
src-tauri/: Cargo.toml  build_log.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app-commands.json
src-tauri/src/: lib.rs  main.rs
